11 December 2012: Wouter
	- fix libevent=no signals on Solaris.

10 December 2012: Wouter
	- implement --with-libevent=no.

10 December 2012: Matthijs
	- Bug #483: Better error messages for TSIG errors.
	- RFC 2845: If BADKEY or BADSIG, RCODE should be NOTAUTH.
	  Also, continue TSIG verication if NOTAUTH.

7 December 2012: Wouter
	- stable pidfile, xfrd is process leader and forks server-parent.

5 December 2012: Wouter
	- NSD4_imp_6 tag.
	- trunk has imp_7 implementation.

4 December 2012: Wouter
	- NSD-RRL documented in manpage.

3 December 2012: Wouter
	- Fixup exit of server-child while notifies are incoming.

28 November 2012: Wouter
	- RRL implements classification type RRSIG.

26 November 2012: Wouter
	- Fix to make nsd.udb portable between 32bit and 64bit machines.
	- Fix to make udb mmap work for FreeBSD8 when it grows significantly.

23 November 2012: Wouter
	- Fix compiler warnings and fix blocking pipes.
	- default tcp-count set to 100.

21 November 2012: Wouter
	- Implement rrl log of unblock for collision.
	- imported TLSA and ILNP support from NSD3.

19 November 2012: Wouter
	- Fix bug 480: libevent use when tcp-count is hit caused hang (in NSD4).

9 November 2012: Wouter
	- Log when NSD-RRL stops a stream from being blocked.

8 November 2012: Willem
	- Fix AXFR. Loop through the zone to transfer only.

2 November 2012: Wouter
	- Fix bug 478: declaration after statement (for gcc 2.95).

1 November 2012: Wouter
	- Fix default settings for RRL.

30 October 2012: Wouter
	- review fixup of RRL SLIP response.
	- RRL uses dev/random at start, nonRRL does not.

26 October 2012: Wouter
	- nsd-control repattern also changes rrl-ratelimit and whitelist limit.

17 October 2012: Wouter
	- Fix alignment problem in zone transfer pipeline code.
	- Fix random generator generating negative.
	- Fix udb radtree strspace creation bug.

15 October 2012: Wouter
	- Fix activated zone does not interrupt transfer.
	- Log of connection failure for zone transfer is neater.
